--- a/Design.kv
+++ b/Design.kv
@@ -1,7 +1,7 @@
 <P>:
     Label:
         text: "\n\nVlerë e pamundur për një ose \nmë shumë fusha."
-        font_size: '26sp'
+        font_size: 26
         size_hint: 0.6, 0.2
         pos_hint: {"x":0.2, "top":1}
 
@@ -100,7 +100,7 @@
     TextInput:
         id: result_label
 
-        text: 'Rezultati: '
+        text: 'Rez: '
         font_size: '26sp'
         padding_y:[9, 0]
         pos_hint: {'x': 0.06, 'y': 0.53}
@@ -170,26 +170,26 @@
 
         size_hint: 0.15, 0.0844
         font_size: '40sp'
-        pos_hint: {'x': 0.21, 'top': 0.89}
+        pos_hint: {'x': 0.22, 'top': 0.89}
 
     Label:
         text: ','
         size_hint: 0.001, 0.001
         font_size: '40sp'
-        pos_hint: {'x': 0.38, 'top': 0.83}
+        pos_hint: {'x': 0.39, 'top': 0.83}
 
     TextInput:
         id: y_one
 
         size_hint: 0.15, 0.0844
         font_size: '40sp'
-        pos_hint: {'x': 0.40, 'top': 0.89}
+        pos_hint: {'x': 0.41, 'top': 0.89}
 
     Label:
         text: ')'
         size_hint: 0.001, 0.001
         font_size: '50sp'
-        pos_hint: {'x': 0.58, 'top': 0.85}
+        pos_hint: {'x': 0.59, 'top': 0.85}
 
     # Point two
     Label:
@@ -203,26 +203,26 @@
 
         size_hint: 0.15, 0.0844
         font_size: '40sp'
-        pos_hint: {'x': 0.21, 'top': 0.78}
+        pos_hint: {'x': 0.22, 'top': 0.78}
 
     Label:
         text: ','
         size_hint: 0.001, 0.001
         font_size: '40sp'
-        pos_hint: {'x': 0.38, 'top': 0.72}
+        pos_hint: {'x': 0.39, 'top': 0.72}
 
     TextInput:
         id: y_two
 
         size_hint: 0.15, 0.0844
         font_size: '40sp'
-        pos_hint: {'x': 0.40, 'top': 0.78}
+        pos_hint: {'x': 0.41, 'top': 0.78}
 
     Label:
         text: ')'
         size_hint: 0.001, 0.001
         font_size: '50sp'
-        pos_hint: {'x': 0.58, 'top': 0.74}
+        pos_hint: {'x': 0.59, 'top': 0.74}
 
 
     Button:
@@ -236,7 +236,7 @@
     TextInput:
         id: result_label_plane
 
-        text: 'Rezultati: '
+        text: 'D: '
         font_size: '26sp'
         padding_y:[9, 0]
         pos_hint: {'x': 0.06, 'y': 0.49}
