--- a/Design.kv
+++ b/Design.kv
@@ -16,6 +16,12 @@
 <MenuButton@Button>:
     size_hint: 0.7, 0.1
     font_size: '26sp'
+    background_normal: ''
+    background_color: 23/255, 99/255, 75/255, 1
+
+<Button>:
+    background_normal: ''
+    background_color: 23/255, 99/255, 75/255, 1
 
 <MainMenu>:
     MenuButton:
@@ -163,66 +169,66 @@
         text: 'P1('
         size_hint: 0.001, 0.001
         font_size: '50sp'
-        pos_hint: {'x': 0.11, 'top': 0.85}
+        pos_hint: {'x': 0.16, 'top': 0.85}
 
     TextInput:
         id: x_one
 
         size_hint: 0.15, 0.0844
         font_size: '40sp'
-        pos_hint: {'x': 0.22, 'top': 0.89}
+        pos_hint: {'x': 0.27, 'top': 0.89}
 
     Label:
         text: ','
         size_hint: 0.001, 0.001
         font_size: '40sp'
-        pos_hint: {'x': 0.39, 'top': 0.83}
+        pos_hint: {'x': 0.44, 'top': 0.83}
 
     TextInput:
         id: y_one
 
         size_hint: 0.15, 0.0844
         font_size: '40sp'
-        pos_hint: {'x': 0.41, 'top': 0.89}
+        pos_hint: {'x': 0.46, 'top': 0.89}
 
     Label:
         text: ')'
         size_hint: 0.001, 0.001
         font_size: '50sp'
-        pos_hint: {'x': 0.59, 'top': 0.85}
+        pos_hint: {'x': 0.64, 'top': 0.85}
 
     # Point two
     Label:
         text: 'P2('
         size_hint: 0.001, 0.001
         font_size: '50sp'
-        pos_hint: {'x': 0.11, 'top': 0.74}
+        pos_hint: {'x': 0.16, 'top': 0.74}
 
     TextInput:
         id: x_two
 
         size_hint: 0.15, 0.0844
         font_size: '40sp'
-        pos_hint: {'x': 0.22, 'top': 0.78}
+        pos_hint: {'x': 0.27, 'top': 0.78}
 
     Label:
         text: ','
         size_hint: 0.001, 0.001
         font_size: '40sp'
-        pos_hint: {'x': 0.39, 'top': 0.72}
+        pos_hint: {'x': 0.44, 'top': 0.72}
 
     TextInput:
         id: y_two
 
         size_hint: 0.15, 0.0844
         font_size: '40sp'
-        pos_hint: {'x': 0.41, 'top': 0.78}
+        pos_hint: {'x': 0.46, 'top': 0.78}
 
     Label:
         text: ')'
         size_hint: 0.001, 0.001
         font_size: '50sp'
-        pos_hint: {'x': 0.59, 'top': 0.74}
+        pos_hint: {'x': 0.64, 'top': 0.74}
 
 
     Button:
