--- a/Design.kv
+++ b/Design.kv
@@ -9,7 +9,7 @@ ScreenManager:
     MDRaisedButton:
         text:"Pikat"
         size_hint: 0.7, 0.1
-        font_size: '26sp'
+        font_size: '26'
         text_color: 1, 1, 1, 1
         pos_hint:{"x":0.15, "top":0.85}
         on_release:
