--- a/Design.kv
+++ b/Design.kv
@@ -19,7 +19,7 @@ ScreenManager:
     MDRaisedButton:
         text:"Button2"
         size_hint: 0.7, 0.1
-        font_size: '26sp'
+        font_size: '26'
         text_color: 1, 1, 1, 1
         pos_hint:{"x":0.15, "top":0.65}
 
@@ -29,7 +29,7 @@ ScreenManager:
     MDRaisedButton:
         text:"Pikat në bosht"
         size_hint: 0.7, 0.1
-        font_size: '26sp'
+        font_size: '26'
         text_color: 1, 1, 1, 1
         pos_hint:{"x":0.15, "top":0.85}
         on_release:
@@ -40,7 +40,7 @@ ScreenManager:
     MDRaisedButton:
         text:"Pikat në rrafsh"
         size_hint: 0.7, 0.1
-        font_size: '26sp'
+        font_size: '26'
         text_color: 1, 1, 1, 1
         pos_hint:{"x":0.15, "top":0.65}
         on_release:
@@ -51,7 +51,7 @@ ScreenManager:
     MDRaisedButton:
         text: "   Kthehu"
         size_hint: 0.4, 0.05
-        font_size: '18sp'
+        font_size: '18'
         text_color: 1, 1, 1, 1
         on_release:
             app.root.current = "menu"
@@ -104,7 +104,7 @@ ScreenManager:
 
     MDRaisedButton:
         text: 'Llogarit'
-        font_size: '20sp'
+        font_size: '20'
         size_hint: 0.88, 0.06
         text_color: 1, 1, 1, 1
         pos_hint: {'x': 0.06, 'y': 0.640}
@@ -121,7 +121,7 @@ ScreenManager:
 
     MDRaisedButton:
         text: 'Fshij'
-        font_size: '20sp'
+        font_size: '20'
         size_hint: 0.88, 0.06
         text_color: 1, 1, 1, 1
         pos_hint: {'x': 0.06, 'y': 0.470}
@@ -139,12 +139,12 @@ ScreenManager:
 
     Label:
         text: 'x1'
-        font_size: '26sp'
+        font_size: '26'
         size_hint: 0.0001, 0.0001
         pos_hint: {'x': 0.13, 'y': 0.9}
     Label:
         text: 'x2'
-        font_size: '26sp'
+        font_size: '26'
         size_hint: 0.0001, 0.0001
         pos_hint: {'x': 0.42, 'y': 0.9}
 
@@ -152,14 +152,14 @@ ScreenManager:
         id: third_input_label
 
         text: 'Pika'
-        font_size: '26sp'
+        font_size: '26'
         size_hint: 0.0001, 0.0001
         pos_hint: {'x': 0.72, 'y': 0.9}
 
     MDRaisedButton:
         text: "   Kthehu"
         size_hint: 0.4, 0.05
-        font_size: '18sp'
+        font_size: '18'
         text_color: 1, 1, 1, 1
         on_release:
             app.root.current = "points"
@@ -251,7 +251,7 @@ ScreenManager:
 
     MDRaisedButton:
         text: 'Llogarit'
-        font_size: '20sp'
+        font_size: '20'
         size_hint: 0.88, 0.06
         text_color: 1, 1, 1, 1
         pos_hint: {'x': 0.06, 'y': 0.60}
@@ -269,7 +269,7 @@ ScreenManager:
 
     MDRaisedButton:
         text: 'Fshij'
-        font_size: '20sp'
+        font_size: '20'
         size_hint: 0.88, 0.06
         text_color: 1, 1, 1, 1
         pos_hint: {'x': 0.06, 'y': 0.43}
@@ -279,7 +279,7 @@ ScreenManager:
     MDRaisedButton:
         text: "   Kthehu"
         size_hint: 0.4, 0.05
-        font_size: '18sp'
+        font_size: '18'
         text_color: 1, 1, 1, 1
         on_release:
             app.root.current = "points"
