--- a/Design.kv
+++ b/Design.kv
@@ -139,12 +139,12 @@ ScreenManager:
 
     Label:
         text: 'x1'
-        font_size: '26'
+        font_size: '26sp'
         size_hint: 0.0001, 0.0001
         pos_hint: {'x': 0.13, 'y': 0.9}
     Label:
         text: 'x2'
-        font_size: '26'
+        font_size: '26sp'
         size_hint: 0.0001, 0.0001
         pos_hint: {'x': 0.42, 'y': 0.9}
 
@@ -152,7 +152,7 @@ ScreenManager:
         id: third_input_label
 
         text: 'Pika'
-        font_size: '26'
+        font_size: '26sp'
         size_hint: 0.0001, 0.0001
         pos_hint: {'x': 0.72, 'y': 0.9}
 
